--- a/FreeRTOS_project_stm32f105/FreeRTOS_project_stm32f105.ioc
+++ b/FreeRTOS_project_stm32f105/FreeRTOS_project_stm32f105.ioc
@@ -12,20 +12,30 @@ Mcu.Family=STM32F1
 Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP3=SPI1
+Mcu.IP4=SPI3
+Mcu.IP5=SYS
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F105R(8-B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
+Mcu.Pin10=PA15
+Mcu.Pin11=PC10
+Mcu.Pin12=PC11
+Mcu.Pin13=PC12
+Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin15=VP_SYS_VS_tim1
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
-Mcu.Pin4=PA11
-Mcu.Pin5=PA12
-Mcu.Pin6=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin7=VP_SYS_VS_tim1
-Mcu.PinsNb=8
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PA8
+Mcu.Pin8=PA11
+Mcu.Pin9=PA12
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F105RBTx
@@ -52,10 +62,30 @@ PA11.Locked=true
 PA11.Signal=GPIO_Output
 PA12.Locked=true
 PA12.Signal=GPIO_Output
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=SPI3_CS1
+PA15.Locked=true
+PA15.Signal=GPXTI15
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=SPI1_CS
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PC10.Mode=Full_Duplex_Master
+PC10.Signal=SPI3_SCK
+PC11.Mode=Full_Duplex_Master
+PC11.Signal=SPI3_MISO
+PC12.Mode=Full_Duplex_Master
+PC12.Signal=SPI3_MOSI
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -111,6 +141,22 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CalculateBaudRate=4.5 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,CLKPhase
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI3.CLKPhase=SPI_PHASE_2EDGE
+SPI3.CalculateBaudRate=2.25 MBits/s
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
