Add read input value(sensors)

--- a/FreeRTOS_project_stm32f105/FreeRTOS_project_stm32f105.ioc
+++ b/FreeRTOS_project_stm32f105/FreeRTOS_project_stm32f105.ioc
@@ -42,16 +42,23 @@ Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
 Mcu.Pin10=PA7
-Mcu.Pin11=PA8
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA15
-Mcu.Pin15=PC10
-Mcu.Pin16=PC11
-Mcu.Pin17=PC12
-Mcu.Pin18=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin19=VP_SYS_VS_tim1
+Mcu.Pin11=PB12
+Mcu.Pin12=PB13
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin15=PC6
+Mcu.Pin16=PC7
+Mcu.Pin17=PC8
+Mcu.Pin18=PA8
+Mcu.Pin19=PA11
 Mcu.Pin2=PC0
+Mcu.Pin20=PA12
+Mcu.Pin21=PA15
+Mcu.Pin22=PC10
+Mcu.Pin23=PC11
+Mcu.Pin24=PC12
+Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin26=VP_SYS_VS_tim1
 Mcu.Pin3=PC1
 Mcu.Pin4=PC2
 Mcu.Pin5=PC3
@@ -59,7 +66,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=20
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F105RBTx
@@ -105,6 +112,22 @@ PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=SPI1_CS
 PA8.Locked=true
 PA8.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=Sensor1
+PB12.Locked=true
+PB12.Signal=GPIO_Input
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=Sensor7
+PB13.Locked=true
+PB13.Signal=GPIO_Input
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=Sensor6
+PB14.Locked=true
+PB14.Signal=GPIO_Input
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=Sensor5
+PB15.Locked=true
+PB15.Signal=GPIO_Input
 PC0.Locked=true
 PC0.Signal=ADCx_IN10
 PC1.Locked=true
@@ -119,6 +142,18 @@ PC2.Locked=true
 PC2.Signal=ADCx_IN12
 PC3.Locked=true
 PC3.Signal=ADCx_IN13
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=Sensor4
+PC6.Locked=true
+PC6.Signal=GPIO_Input
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=Sensor3
+PC7.Locked=true
+PC7.Signal=GPIO_Input
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=Sensor2
+PC8.Locked=true
+PC8.Signal=GPIO_Input
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
