Add fixes for temp sens

--- a/FreeRTOS_project_stm32f105/FreeRTOS_project_stm32f105.ioc
+++ b/FreeRTOS_project_stm32f105/FreeRTOS_project_stm32f105.ioc
@@ -21,8 +21,10 @@ Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlign
 Dma.Request0=ADC1
 Dma.RequestsNb=1
 FREERTOS.FootprintOK=false
-FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
+FREERTOS.HEAP_NUMBER=3
+FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,HEAP_NUMBER
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;Task2,0,128,Task2_Init,Default,NULL,Dynamic,NULL,NULL;Task3,0,128,Task3_Init,Default,NULL,Dynamic,NULL,NULL;Task4,0,128,Task4_Init,Default,NULL,Dynamic,NULL,NULL;Task5,0,128,Task5_Init,Default,NULL,Dynamic,NULL,NULL;Task6,0,128,Task6_Init,Default,NULL,Dynamic,NULL,NULL;Task7,0,128,Task7_Init,Default,NULL,Dynamic,NULL,NULL;Task8,0,128,Task8_Init,Default,NULL,Dynamic,NULL,NULL;Task9,-3,128,Task9_Init,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=5616
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -52,15 +54,17 @@ Mcu.Pin15=PC6
 Mcu.Pin16=PC7
 Mcu.Pin17=PC8
 Mcu.Pin18=PA8
-Mcu.Pin19=PA11
+Mcu.Pin19=PA9
 Mcu.Pin2=PC0
-Mcu.Pin20=PA12
-Mcu.Pin21=PA15
-Mcu.Pin22=PC10
-Mcu.Pin23=PC11
-Mcu.Pin24=PC12
-Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin26=VP_SYS_VS_tim1
+Mcu.Pin20=PA10
+Mcu.Pin21=PA11
+Mcu.Pin22=PA12
+Mcu.Pin23=PA15
+Mcu.Pin24=PC10
+Mcu.Pin25=PC11
+Mcu.Pin26=PC12
+Mcu.Pin27=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin28=VP_SYS_VS_tim1
 Mcu.Pin3=PC1
 Mcu.Pin4=PC2
 Mcu.Pin5=PC3
@@ -68,7 +72,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=27
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F105RBTx
@@ -92,8 +96,16 @@ NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=m2
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=m3
 PA11.Locked=true
 PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=m4
 PA12.Locked=true
 PA12.Signal=GPIO_Output
 PA15.GPIOParameters=GPIO_Label
@@ -114,6 +126,10 @@ PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=SPI1_CS
 PA8.Locked=true
 PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=m1
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=Sensor1
 PB12.Locked=true
